# PX4-Offboard

./: .bash_aliases  .gitmodules  99-usb-serial.rules  Odroid_Ubuntu_setup.md  README.md  install_usb_rules.sh  radio-bridge.service
ground/rviz/: single_pitot.rviz  tarot_680_rplidar.rviz  tarot_ironman_pitot.rviz
hitl_px4/: CMakeLists.txt  package.xml
hitl_px4/config/: octo-gs.yaml
hitl_px4/launch/: lame_controller.launch.py  octo-gs.launch.py  tarot_680_lame.launch.py  tarot_680_rplidar_launch.py  tarot_ironman_gs.launch.py  tarot_ironman_pitot.launch.py
px4_custom_fn/: .gitignore  CMakeLists.txt  package.xml
px4_custom_fn/launch/: obc_launch.py
px4_custom_fn/src/: odom_broadcaster.cpp  px4_ros_bridge.cpp  telemetry_bag_recorder.cpp
px4_ros_bridge/: CMakeLists.txt  package.xml
px4_ros_bridge/launch/: obc_launch.py  tarot_680_rplidar_launch.py  tarot_ironman_pitot_launch.py  testing_tarot_ironman_pitot_launch.py
px4_ros_bridge/src/: odom_broadcaster.cpp  px4_ros_bridge.cpp  rigid_twist_calculator.cpp  telemetry_bag_recorder.cpp
