<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hitl_px4</name>
  <version>0.0.0</version>
  <description>launchers and utilities for HITL (hardware-in-the-loop) testing of PX4-based systems</description>
  <maintainer email="leonardo.cecchin@polimi.it">root</maintainer>
  <license>GPL</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
